(library
 (name binstring)
 (modules binstring)
 (libraries cstruct uutf))

(test
 (name get_bits_test)
 (modules get_bits_test)
 (libraries binstring))

(test
 (name get_byte_test)
 (modules get_byte_test)
 (libraries binstring))

(test
 (name sub_test)
 (modules sub_test)
 (libraries binstring))

(test
 (name of_string_test)
 (modules of_string_test)
 (libraries binstring))

(executable
 (name sub_bench)
 (modules sub_bench)
 (libraries binstring scarab))

(executable
 (name concat_bench)
 (modules concat_bench)
 (libraries binstring scarab))
