(library
 (public_name bytestring)
 (modules bytestring)
 (libraries cstruct uutf))

(library
  (package bytestring)
  (name ppx_bytestring)
  (modules ppx_bytestring)
  (kind ppx_rewriter)
  (libraries compiler-libs ppxlib bytestring)
  (preprocess (pps ppxlib.metaquot)))

(test
 (name get_bits_test)
 (modules get_bits_test)
 (libraries bytestring))

(test
 (name get_byte_test)
 (modules get_byte_test)
 (libraries bytestring))

(test
 (name sub_test)
 (modules sub_test)
 (libraries bytestring))

(test
 (name of_string_test)
 (modules of_string_test)
 (libraries bytestring))

(executable
 (name sub_bench)
 (modules sub_bench)
 (libraries bytestring scarab))

(executable
 (name concat_bench)
 (modules concat_bench)
 (libraries bytestring scarab))
