(library
 (public_name bytestring)
 (modules bytestring)
 (libraries cstruct uutf))

(library
 (package bytestring)
 (name bytepattern)
 (modules bytepattern)
 (preprocess
  (pps sedlex.ppx))
 (libraries sedlex bytestring))

(library
 (package bytestring)
 (name ppx_bytestring)
 (modules ppx_bytestring)
 (kind ppx_rewriter)
 (libraries compiler-libs ppxlib bytepattern bytestring)
 (preprocess
  (pps ppxlib.metaquot)))

(test
 (package bytestring)
 (name bytepattern_test)
 (modules bytepattern_test)
 (libraries bytepattern))

(executable
 (name sub_bench)
 (modules sub_bench)
 (libraries bytestring scarab))

(executable
 (name concat_bench)
 (modules concat_bench)
 (libraries bytestring scarab))
