(test
 (name io_copy_buffered_test)
 (modules io_copy_buffered_test)
 (libraries riot))

(test
 (name io_copy_test)
 (modules io_copy_test)
 (libraries riot))

(test
 (name io_writer_test)
 (modules io_writer_test)
 (libraries riot))

(test
 (name io_reader_test)
 (modules io_reader_test)
 (deps fixtures/io_readv.txt)
 (libraries riot))

(test
 (name io_reader_large_test)
 (modules io_reader_large_test)
 (deps fixtures/ocaml_org.html)
 (libraries riot))

(test
 (name add_monitor_test)
 (modules add_monitor_test)
 (libraries riot))

(test
 (name application_test)
 (modules application_test)
 (libraries riot))

(test
 (name io_readv_test)
 (deps fixtures/io_readv.txt)
 (modules io_readv_test)
 (libraries riot))

(test
 (name io_writev_test)
 (modules io_writev_test)
 (deps generated/.gitkeep)
 (libraries riot))

(test
 (name link_processes_test)
 (modules link_processes_test)
 (libraries riot))

(test
 (name net_addr_uri_test)
 (modules net_addr_uri_test)
 (libraries riot))

(test
 (name net_reader_writer_test)
 (modules net_reader_writer_test)
 (libraries riot))

(test
 (name net_test)
 (modules net_test)
 (libraries riot))

(test
 (name process_registration_test)
 (modules process_registration_test)
 (libraries riot))

(test
 (name readme_example)
 (modules readme_example)
 (libraries riot))

(test
 (name selective_receive_test)
 (modules selective_receive_test)
 (libraries riot))

(test
 (name send_after_test)
 (modules send_after_test)
 (libraries riot))

(test
 (name send_interval_test)
 (modules send_interval_test)
 (libraries riot))

(test
 (name send_order_test)
 (modules send_order_test)
 (libraries riot))

(test
 (name spawn_and_exit_test)
 (modules spawn_and_exit_test)
 (libraries riot))

(test
 (name supervisor_shutdown_test)
 (modules supervisor_shutdown_test)
 (libraries riot))

(test
 (name telemetry_test)
 (modules telemetry_test)
 (libraries riot))
