(library
 (package riot)
 (name port_finder)
 (modules port_finder)
 (libraries riot))

(test
 (package riot)
 (name ssl_test)
 (modules ssl_test)
 (deps fixtures/tls.crt fixtures/tls.key)
 (libraries riot port_finder x509 mirage-crypto-rng mirage-crypto-rng.unix))

(test
 (package riot)
 (name io_writer_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_writer_test)
 (libraries riot))

(test
 (package riot)
 (name io_reader_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_reader_test)
 (deps fixtures/io_readv.txt)
 (libraries riot))

(test
 (package riot)
 (name io_reader_large_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_reader_large_test)
 (deps fixtures/ocaml_org.html)
 (libraries riot))

(test
 (package riot)
 (name io_readv_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (deps fixtures/io_readv.txt)
 (modules io_readv_test)
 (libraries riot))

(test
 (package riot)
 (name io_writev_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_writev_test)
 (deps generated/.gitkeep)
 (libraries riot))

; (test
;  (package riot)
;  (name net_timeout_test)
;  (enabled_if
;   (= %{env:OPAM_REPO_CI=false} false))
;  (modules net_timeout_test)
;  (libraries riot port_finder))

(test
 (package riot)
 (name net_addr_uri_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules net_addr_uri_test)
 (libraries riot port_finder))

(test
 (package riot)
 (name net_reader_writer_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules net_reader_writer_test)
 (libraries riot port_finder))

; (test
;  (package riot)
;  (name net_reader_writer_timeout_test)
;  (enabled_if
;   (= %{env:OPAM_REPO_CI=false} false))
;  (modules net_reader_writer_timeout_test)
;  (libraries riot port_finder))

(test
 (package riot)
 (name net_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules net_test)
 (libraries riot port_finder))

(test
 (package riot)
 (name add_monitor_test)
 (modules add_monitor_test)
 (libraries riot))

(test
 (package riot)
 (name application_test)
 (modules application_test)
 (libraries riot))

(test
 (package riot)
 (name link_processes_test)
 (modules link_processes_test)
 (libraries riot))

(test
 (package riot)
 (name process_registration_test)
 (modules process_registration_test)
 (libraries riot))

; (test
;  (package riot)
;  (name process_stealing_test)
;  (modules process_stealing_test)
;  (libraries riot))

(test
 (package riot)
 (name process_priority_test)
 (modules process_priority_test)
 (libraries riot))

(test
 (package riot)
 (name readme_example)
 (modules readme_example)
 (libraries riot))

(test
 (package riot)
 (name selective_receive_test)
 (modules selective_receive_test)
 (libraries riot))

(test
 (package riot)
 (name send_after_test)
 (modules send_after_test)
 (libraries riot))

(test
 (package riot)
 (name cancel_timer_test)
 (modules cancel_timer_test)
 (libraries riot))

(test
 (package riot)
 (name send_interval_test)
 (modules send_interval_test)
 (libraries riot))

(test
 (package riot)
 (name send_order_test)
 (modules send_order_test)
 (libraries riot))

(test
 (package riot)
 (name spawn_and_exit_test)
 (modules spawn_and_exit_test)
 (libraries riot))

(test
 (package riot)
 (name supervisor_shutdown_test)
 (modules supervisor_shutdown_test)
 (libraries riot))

(test
 (package riot)
 (name telemetry_test)
 (modules telemetry_test)
 (libraries riot))

(test
 (package riot)
 (name receive_timeout_test)
 (modules receive_timeout_test)
 (libraries riot))

(test
 (package riot)
 (name task_test)
 (modules task_test)
 (libraries riot))

(test
 (package riot)
 (name terminate_when_main_terminates_test)
 (modules terminate_when_main_terminates_test)
 (libraries riot))
